tests/specs/ecosystem/molt/lib/0_18_0.test
molt/lib/0.18.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /testing.ts:6:9
   | 
 6 |   create(pattern = "") {
   |         ^^^^^^^^^^^^^^^^
   | 
 7 |     return class CommandStub extends spy(Deno.Command) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
 8 |       #cmd: string;
   | ^^^^^^^^^^^^^^^^^^^
   | 
 9 |       constructor(
   | ^^^^^^^^^^^^^^^^^^
   | 
10 |         command: string | URL,
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
11 |         options?: Deno.CommandOptions,
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
12 |       ) {
   | ^^^^^^^^^
   | 
13 |         super(command, options);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
14 |         this.#cmd = command.toString();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
15 |       }
   | ^^^^^^^
   | 
16 |       #output: Deno.CommandOutput = {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
17 |         code: 0,
   | ^^^^^^^^^^^^^^^^
   | 
18 |         stdout: new Uint8Array(),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
19 |         stderr: new Uint8Array(),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
20 |         success: true,
   | ^^^^^^^^^^^^^^^^^^^^^^
   | 
21 |         signal: null,
   | ^^^^^^^^^^^^^^^^^^^^^
   | 
22 |       };
   | ^^^^^^^^
   | 
23 |       outputSync() {
   | ^^^^^^^^^^^^^^^^^^^^
   | 
24 |         return this.#cmd.toString().includes(pattern)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
25 |           ? this.#output
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   | 
26 |           : super.outputSync();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
27 |       }
   | ^^^^^^^
   | 
28 |       output() {
   | ^^^^^^^^^^^^^^^^
   | 
29 |         return this.#cmd.includes(pattern)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
30 |           ? Promise.resolve(this.#output)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
31 |           : super.output();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
32 |       }
   | ^^^^^^^
   | 
33 |       spawn() {
   | ^^^^^^^^^^^^^^^
   | 
34 |         return this.#cmd.includes(pattern)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
35 |           ? new Deno.ChildProcess()
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
36 |           : super.spawn();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
37 |       }
   | ^^^^^^^
   | 
38 |       static clear() {
   | ^^^^^^^^^^^^^^^^^^^^^^
   | 
39 |         this.calls = [];
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   | 
40 |       }
   | ^^^^^^^
   | 
41 |     };
   | ^^^^^^
   | 
42 |   },
   | ^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /testing.ts:71:9
   | 
71 |   create(
   |         ^
   | 
72 |     fs: FileSystemFake,
   | ^^^^^^^^^^^^^^^^^^^^^^^
   | 
73 |   ) {
   | ^^^^^
   | 
74 |     const original = Deno.writeTextFile;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
75 |     const tmp = getTempDir();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
76 |     return stub(
   | ^^^^^^^^^^^^^^^^
   | 
77 |       Deno,
   | ^^^^^^^^^^^
   | 
78 |       "writeTextFile",
   | ^^^^^^^^^^^^^^^^^^^^^^
   | 
79 |       (path, data) => {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   | 
80 |         if (path.toString().startsWith(tmp)) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
81 |           return original(path, data);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
82 |         } else {
   | ^^^^^^^^^^^^^^^^
   | 
83 |           fs.set(path.toString(), format(data.toString(), LF));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
84 |           return Promise.resolve();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
85 |         }
   | ^^^^^^^^^
   | 
86 |       },
   | ^^^^^^^^
   | 
87 |     );
   | ^^^^^^
   | 
88 |   },
   | ^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /testing.ts:100:9
    | 
100 |   create(
    |         ^
    | 
101 |     createResponse: (
    | ^^^^^^^^^^^^^^^^^^^^^
    | 
102 |       request: string | URL | Request,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
103 |       init: RequestInit & { original: typeof fetch },
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
104 |     ) => Response | Promise<Response>,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
105 |   ) {
    | ^^^^^
    | 
106 |     const original = globalThis.fetch;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
107 |     return stub(
    | ^^^^^^^^^^^^^^^^
    | 
108 |       globalThis,
    | ^^^^^^^^^^^^^^^^^
    | 
109 |       "fetch",
    | ^^^^^^^^^^^^^^
    | 
110 |       (request, init) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    | 
111 |         Promise.resolve(createResponse(request, { ...init, original })),
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
112 |     );
    | ^^^^^^
    | 
113 |   },
    | ^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


